# libfchat

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: client_serialization.rs  simple_client.rs
src/: bbcode.rs  connection.rs  enums.rs  error.rs  fchat.rs  lib.rs  lib.rs.in  server.rs  ticket.rs
src/message/: client.rs  mod.rs  server.rs
