[package]
authors = ["Effnote <effnote@gmail.com>"]
name = "fchat"
version = "0.3.0"
edition = "2021"

[lib]

[dependencies]
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
tokio = "1.38.0"
futures = "0.3.1"
reqwest = { version = "0.12.5", features = ["json"] }

[dependencies.tokio-tungstenite]
version = "0.23.1"
features = ["native-tls"]

[dev-dependencies.tokio]
version = "1.38.0"
features = ["full"]
