[package]
authors = ["Effnote <effnote@gmail.com>"]
name = "fchat"
version = "0.3.1"
edition = "2024"

[lib]

[dependencies]
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
tokio = "1.38.0"
reqwest = { version = "0.12.5", features = ["json"] }
futures-core = "0.3.30"
futures-sink = "0.3.30"
futures-util = "0.3.30"

[dependencies.tokio-tungstenite]
version = "0.23.1"
features = ["native-tls"]

[dev-dependencies.tokio]
version = "1.38.0"
features = ["full"]
